--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: curatedMetagenomicAnalyses
 Title: Analyses using curatedMetagenomicData
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: 
     person(given = "First",
            family = "Last",
@@ -13,10 +13,17 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Imports:
+    curatedMetagenomicData
 Suggests: 
     BiocStyle,
     knitr,
     RefManageR,
     rmarkdown,
-    sessioninfo
+    sessioninfo,
+    tidyverse
 VignetteBuilder: knitr
+biocViews:
+    ExperimentHub,
+    MicrobiomeData,
+    ReproducibleResearch
