--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports:
-    curatedMetagenomicData
+    curatedMetagenomicData,
+    dplyr
 Suggests: 
     BiocStyle,
     knitr,
