--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,9 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Requires:
+    curatedMetagenomicData
 Imports:
-    curatedMetagenomicData,
     dplyr
 Suggests: 
     BiocStyle,
