Improve namespace and imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,8 @@
 export(dataDump)
 export(makeSEforCondition)
 importFrom(curatedMetagenomicData,returnSamples)
-importFrom(dplyr,`%>%`)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
+importFrom(utils,write.csv)
