Add url to DESCRIPTION and _pkgdown.yml

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,3 +33,4 @@ biocViews:
     ExperimentHub,
     MicrobiomeData,
     ReproducibleResearch
+URL: https://github.com/waldronlab/curatedMetagenomicAnalyses
