Rd & DESCRIPTION updates

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,11 @@ License: CC BY 4.0
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Imports:
     curatedMetagenomicData,
-    dplyr
+    dplyr,
+    meta
 Suggests:
     ANCOMBC,
     BiocStyle,
@@ -29,7 +30,6 @@ Suggests:
     hrbrthemes,
     kableExtra,
     knitr,
-    meta,
     mia,
     RefManageR,
     rmarkdown,
