--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,5 +1,8 @@
 url: https://github.com/waldronlab/curatedMetagenomicAnalyses
 
+template:
+  bootstrap: 5
+
 pkgdown:
   as_is: false
 
@@ -33,3 +36,4 @@ navbar:
   right:
     - icon: fab fa-github fa-lg
       href: https://github.com/waldronlab/curatedMetagenomicAnalyses
+      
